// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders a full screen spinner 1`] = `
<div
  className="Van-Spinner Van-Spinner--fullScreen"
>
  <div
    className="Van-Spinner-iconContainer"
  />
</div>
`;

exports[`<Spinner /> renders a spinner 1`] = `
<div
  className="Van-Spinner"
>
  <div
    className="Van-Spinner-iconContainer"
  />
</div>
`;

exports[`<Spinner /> renders a spinner with children 1`] = `
<div
  className="Van-Spinner"
>
  <div
    className="Van-Spinner-iconContainer"
  />
  <div
    className="Van-Spinner-content"
  >
    <strong>
      i am a child
    </strong>
  </div>
</div>
`;
